--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build -p 3002",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +37,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
+
 
 
