--- a/deploy/nginx/technomk.conf
+++ b/deploy/nginx/technomk.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name techno-mk.ru www.techno-mk.ru;
+    server_name tehno-mk.ru www.tehno-mk.ru;
 
     # Increase if you plan to upload larger images
     client_max_body_size 10m;
