--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "better-sqlite3": "^9.2.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
